--- a/CodeContact/CodeContact.cbp
+++ b/CodeContact/CodeContact.cbp
@@ -32,7 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/Contact.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/Contact.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
